[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menus/AudioMenu.gd" type="Script" id=2]
[ext_resource path="res://Menus/ButtonFont.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[node name="AudioMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_top = 0.216339
margin_right = 1022.0
margin_bottom = 599.216
color = Color( 0.933333, 0.615686, 0.501961, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -122.0
margin_top = 13.0
margin_right = 122.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 1 )
text = "Audio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="Background"]
margin_left = 785.324
margin_top = 37.0
margin_right = 973.324
margin_bottom = 101.0
custom_fonts/font = ExtResource( 4 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterVolumeLabel" type="Label" parent="Background"]
margin_left = 55.0
margin_top = 144.784
margin_right = 380.0
margin_bottom = 193.784
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Master Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterVolumeButton" type="CheckButton" parent="Background"]
margin_left = 402.0
margin_top = 154.0
margin_right = 478.0
margin_bottom = 194.0
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterVolumeSlider" type="HSlider" parent="Background"]
margin_left = 82.0
margin_top = 221.0
margin_right = 967.0
margin_bottom = 237.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.0
value = 1.0
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolumeLabel" type="Label" parent="Background"]
margin_left = 55.0
margin_top = 282.784
margin_right = 380.0
margin_bottom = 331.784
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Music Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolumeButton" type="CheckButton" parent="Background"]
margin_left = 402.0
margin_top = 292.0
margin_right = 478.0
margin_bottom = 332.0
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolumeSlider" type="HSlider" parent="Background"]
margin_left = 82.0
margin_top = 359.0
margin_right = 967.0
margin_bottom = 375.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.0
value = 0.5
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EffectsVolumeLabel" type="Label" parent="Background"]
margin_left = 55.0
margin_top = 424.784
margin_right = 380.0
margin_bottom = 473.784
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Effects Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EffectsVolumeButton" type="CheckButton" parent="Background"]
margin_left = 402.0
margin_top = 434.0
margin_right = 478.0
margin_bottom = 474.0
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EffectsVolumeSlider" type="HSlider" parent="Background"]
margin_left = 82.0
margin_top = 501.0
margin_right = 967.0
margin_bottom = 517.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.0
value = 0.5
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Background/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="Background/MasterVolumeButton" to="." method="_on_MasterVolumeButton_pressed"]
[connection signal="value_changed" from="Background/MasterVolumeSlider" to="." method="_on_MasterVolumeSlider_value_changed"]
[connection signal="pressed" from="Background/MusicVolumeButton" to="." method="_on_MusicVolumeButton_pressed"]
[connection signal="value_changed" from="Background/MusicVolumeSlider" to="." method="_on_MusicVolumeSlider_value_changed"]
[connection signal="pressed" from="Background/EffectsVolumeButton" to="." method="_on_EffectsVolumeButton_pressed"]
[connection signal="value_changed" from="Background/EffectsVolumeSlider" to="." method="_on_EffectsVolumeSlider_value_changed"]
